@@ -1,3 +1,7 @@
+2007-12-06  Reiner Steib  <Reiner.Steib@gmx.de>
+
+	* gnus-start.el (gnus-load): Rename local variable to avoid confusion.
+
 2007-12-06  D. Goel  <deego3@gmail.com>
 	* gnus-start.el (gnus-load): Fix breakage from last change.
 
